--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-boilerplate",
+  "name": "erinn-hub",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prettier": "prettier --write \"src/**/*.{ts,tsx}\"",
     "prepare": "husky"
   },
   "dependencies": {
