--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "lucide-react": "^0.453.0",
     "next": "^14.2.5",
     "postcss": "^8.4.40",
     "react": "^18",
