feat: add dotenv package and update environment variables
- Added the dotenv package to handle environment variables.
- Updated the .env.example file to include the NEXT_PUBLIC_NXOPEN_API_URL and NEXT_PUBLIC_NXOPEN_API_KEY variables.
- Updated the next.config.js file to use the NXOPEN_API_URL environment variable for API endpoint URLs.
- Created the src/app/api/npc-shop/route.ts file to handle GET requests for NPC shop data.
- Created the src/app/api/auction/route.ts file to handle GET requests for auction data.
- Updated the src/app/npc-shop/page.tsx file to fetch data from the API endpoints.
- Removed unused code and dummy data from the src/app/npc-shop/page.tsx file.
- Updated the package.json and pnpm-lock.yaml files to include the dotenv package as a dependency.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-BASE_URL=https://jsonplaceholder.typicode.com
+NEXT_PUBLIC_NXOPEN_API_URL=https://open.api.nexon.com
+NEXT_PUBLIC_NXOPEN_API_KEY=key
