feat: 🎸 add horn keyword filtering

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_NXOPEN_API_URL=https://open.api.nexon.com
-NEXT_PUBLIC_NXOPEN_API_KEY=key
+NXOPEN_API_URL=https://open.api.nexon.com
+NXOPEN_API_KEY=key
