feat: 🎸 add contact page

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 BASE_URL=http://localhost:3000
+
+# NEXON Open API
 NXOPEN_API_URL=https://open.api.nexon.com
-NXOPEN_API_KEY=key
+NXOPEN_API_KEY=test
+
+# Mailer
+MAILER_AUTH_USER=user
+MAILER_AUTH_PASS=pass
