--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "dotenv": "^16.4.5",
     "lucide-react": "^0.453.0",
     "next": "^14.2.5",
+    "nodemailer": "^6.9.15",
     "postcss": "^8.4.40",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/eslint-plugin-security": "^3",
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.16",
     "@types/prettier": "^2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
