--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.453.0",
