--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.4.40",
     "react": "^18",
     "react-dom": "^18",
+    "use-sound": "^4.0.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
