--- a/package.json
+++ b/package.json
@@ -11,40 +11,40 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/speed-insights": "^1.0.12",
-    "axios": "^1.7.2",
-    "dotenv": "^16.4.5",
-    "lucide-react": "^0.453.0",
-    "next": "^15.0.2",
-    "nodemailer": "^6.9.15",
-    "postcss": "^8.4.40",
-    "react": "19.0.0-rc-7c8e5e7a-20241101",
-    "react-dom": "19.0.0-rc-7c8e5e7a-20241101",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "lucide-react": "^0.469.0",
+    "next": "^15.1.3",
+    "nodemailer": "^6.9.16",
+    "postcss": "^8.4.49",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "use-sound": "^4.0.3",
-    "yup": "^1.4.0"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/eslint-plugin-security": "^3",
     "@types/node": "^22",
-    "@types/nodemailer": "^6.4.16",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "autoprefixer": "^10",
-    "daisyui": "^4.12.10",
-    "eslint": "^9.14.0",
-    "eslint-config-next": "^15.0.2",
+    "daisyui": "^4.12.23",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.3",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "husky": "^9.1.4",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "prettier": "3.3.3",
+    "prettier": "3.4.2",
     "tailwindcss": "^3",
-    "ts-jest": "29.2.3",
-    "typescript": "5.4.5",
-    "globals": "^15.11.0",
-    "typescript-eslint": "8.6.0"
+    "ts-jest": "29.2.5",
+    "typescript": "5.7.2",
+    "globals": "^15.14.0",
+    "typescript-eslint": "8.19.0"
   }
 }
