--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.20.0",
     "@types/eslint-plugin-security": "^3",
     "@types/node": "^22",
     "@types/nodemailer": "^6.4.17",
@@ -38,13 +40,13 @@
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^15.14.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "prettier": "3.4.2",
     "tailwindcss": "^3",
     "ts-jest": "29.2.5",
     "typescript": "5.7.2",
-    "globals": "^15.14.0",
     "typescript-eslint": "8.19.0"
   }
 }
