--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.7",
     "lucide-react": "^0.469.0",
     "next": "^15.2.4",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^6.9.16",
     "postcss": "^8.4.49",
     "react": "19.0.0",
