--- a/package.json
+++ b/package.json
@@ -15,51 +15,52 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.66.0",
-    "@tanstack/react-query-devtools": "^5.66.0",
-    "@vercel/analytics": "^1.4.1",
-    "@vercel/speed-insights": "^1.1.0",
-    "axios": "^1.8.2",
-    "dotenv": "^16.4.7",
-    "lucide-react": "^0.469.0",
-    "next": "^15.2.4",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query-devtools": "^5.85.5",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
+    "lucide-react": "^0.542.0",
+    "next": "^15.5.2",
     "next-pwa": "^5.6.0",
-    "nodemailer": "^6.9.16",
-    "postcss": "^8.4.49",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "use-sound": "^4.0.3",
-    "yup": "^1.6.1"
+    "nodemailer": "^7.0.5",
+    "postcss": "^8.5.6",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "use-sound": "^5.0.0",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.20.0",
-    "@playwright/test": "^1.50.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.34.0",
+    "@playwright/test": "^1.55.0",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/eslint-plugin-security": "^3",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22",
-    "@types/nodemailer": "^6.4.17",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10",
-    "daisyui": "^4.12.23",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.3",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-prettier": "5.2.1",
+    "daisyui": "^5.0.51",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "^15.5.2",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "globals": "^15.14.0",
+    "globals": "^16.3.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "prettier": "3.4.2",
-    "tailwindcss": "^3",
-    "ts-jest": "29.2.5",
-    "typescript": "5.7.2",
-    "typescript-eslint": "8.19.0"
+    "jest": "^30.1.0",
+    "jest-environment-jsdom": "^30.1.0",
+    "prettier": "3.6.2",
+    "tailwindcss": "^4",
+    "ts-jest": "29.4.1",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.41.0"
   }
 }
